feat: overhaul metadata storage, library management, and media organization
- Migrate metadata persistence to SQLite for reliable storage and retrieval.
- Refactor artwork handling to save artwork as image files on disk and load them on demand instead of storing byte arrays in memory, significantly reducing memory usage.
- Implement search functionality for Playlists, Albums, Genres, and Artists tabs.
- Implement sorting for Playlists, Albums, Genres, and Artists tabs.
- Add the ability to remove folders from the media library.
- Improve metadata loading and cache refresh workflow.
- General refactoring and internal cleanup related to metadata management and media organization.

Signed-off-by: Ahmed <ahmedgouda03@gmail.com>