@@ -1,6 +1,7 @@
 package application.service;
 
 import domain.model.library.MediaLibrary;
+import domain.model.media.Playlist;
 import domain.model.media.Track;
 import infrastructure.scanner.MediaScanner;
 
@@ -13,9 +14,14 @@ public class MediaService {
     private final MediaLibrary mediaLibrary;
     private final LibraryService libraryService;
 
-    private List<List<Track>> cachedAlbums = new ArrayList<>();
-    private List<List<Track>> cachedArtists = new ArrayList<>();
-    private List<List<Track>> cachedGenres = new ArrayList<>();
+    private List<Track> cachedTracks = new ArrayList<>();
+    private List<Track> cachedSongs = new ArrayList<>();
+    private List<Track> cachedPodcasts = new ArrayList<>();
+    private List<Track> cachedAudioBooks = new ArrayList<>();
+
+    private List<Playlist> cachedAlbums = new ArrayList<>();
+    private List<Playlist> cachedArtists = new ArrayList<>();
+    private List<Playlist> cachedGenres = new ArrayList<>();
 
     public MediaService(MediaScanner scanner,
                         MediaLibrary mediaLibrary,
@@ -46,27 +52,46 @@ public class MediaService {
     }
 
     private void rebuildMetadataCaches() {
+
+        this.cachedTracks = mediaLibrary.getTracks();
+        this.cachedPodcasts = mediaLibrary.getPodcasts();
+        this.cachedSongs = mediaLibrary.getSongs();
+        this.cachedAudioBooks = mediaLibrary.getAudiobooks();
+        IO.println("MediaService.java line 60:" + this.cachedTracks.size());
+
         List<Track> allTracks = getTracks();
 
         this.cachedAlbums = allTracks.stream()
                 .collect(Collectors.groupingBy(track -> {
-                    if (track.getMetadata() == null || track.getMediaMetadata().getSeries() == null) {
+                    if (track.getMetadata() == null || track.getMetadata().getSeries() == null) {
                         return "Unknown Album";
                     }
-                    String series = track.getMediaMetadata().getSeries().trim();
+                    String series = track.getMetadata().getSeries().trim();
                     return series.isEmpty() ? "Unknown Album" : series;
                 }))
-                .values().stream().toList();
+                .entrySet().stream()
+                .map(entry -> {
+                    Playlist albumPlaylist = new Playlist(entry.getKey());
+                    albumPlaylist.addTracks(entry.getValue());
+                    return albumPlaylist;
+                })
+                .collect(Collectors.toList());
 
         this.cachedArtists = allTracks.stream()
                 .collect(Collectors.groupingBy(track -> {
-                    if (track.getMetadata() == null || track.getMediaMetadata().getArtist() == null) {
+                    if (track.getMetadata() == null || track.getMetadata().getArtist() == null) {
                         return "Unknown Artist";
                     }
-                    String artist = track.getMediaMetadata().getArtist().trim();
+                    String artist = track.getMetadata().getArtist().trim();
                     return artist.isEmpty() ? "Unknown Artist" : artist;
                 }))
-                .values().stream().toList();
+                .entrySet().stream()
+                .map(entry -> {
+                    Playlist artistPlaylist = new Playlist(entry.getKey());
+                    artistPlaylist.addTracks(entry.getValue());
+                    return artistPlaylist;
+                })
+                .collect(Collectors.toList());
 
         this.cachedGenres = allTracks.stream()
                 .collect(Collectors.groupingBy(track -> {
@@ -76,7 +101,20 @@ public class MediaService {
                     String genre = track.getMetadata().getGenre().trim();
                     return genre.isEmpty() ? "Unknown Genre" : genre;
                 }))
-                .values().stream().toList();
+                .entrySet().stream()
+                .map(entry -> {
+                    Playlist genrePlaylist = new Playlist(entry.getKey());
+                    genrePlaylist.addTracks(entry.getValue());
+                    return genrePlaylist;
+                })
+                .collect(Collectors.toList());
+    }
+
+    public void refreshMetadataCaches() {
+        this.cachedTracks = mediaLibrary.getTracks();
+        this.cachedPodcasts = mediaLibrary.getPodcasts();
+        this.cachedSongs = mediaLibrary.getSongs();
+        this.cachedAudioBooks = mediaLibrary.getAudiobooks();
     }
 
     public LibraryService getLibraryService() {
@@ -84,30 +122,31 @@ public class MediaService {
     }
 
     public List<Track> getSongs() {
-        return mediaLibrary.getSongs();
+        return cachedSongs;
     }
 
     public List<Track> getAudioBooks() {
-        return mediaLibrary.getAudiobooks();
+        return cachedAudioBooks;
     }
 
     public List<Track> getPodcasts() {
-        return mediaLibrary.getPodcasts();
+        return cachedPodcasts;
     }
 
     public List<Track> getTracks() {
-        return mediaLibrary.getTracks();
+        return cachedTracks;
     }
 
-    public List<List<Track>> getAlbums() {
+
+    public List<Playlist> getAlbums() {
         return cachedAlbums;
     }
 
-    public List<List<Track>> getArtists() {
+    public List<Playlist> getArtists() {
         return cachedArtists;
     }
 
-    public List<List<Track>> getGenre() {
+    public List<Playlist> getGenre() {
         return cachedGenres;
     }
 }
